// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/dropdown/demo/arrow.md correctly 1`] = `
Array [
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomLeft
    </span>
  </button>,
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomCenter
    </span>
  </button>,
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomRight
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topLeft
    </span>
  </button>,
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topCenter
    </span>
  </button>,
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topRight
    </span>
  </button>,
]
`;

exports[`renders ./components/dropdown/demo/basic.md correctly 1`] = `
<a
  class="ant-dropdown-trigger ant-dropdown-link"
>
  Hover me 
  <span
    aria-label="down"
    class="anticon anticon-down"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</a>
`;

exports[`renders ./components/dropdown/demo/context-menu.md correctly 1`] = `
<div
  class="ant-dropdown-trigger site-dropdown-context-menu"
  style="text-align:center;height:200px;line-height:200px"
>
  Right Click on here
</div>
`;

exports[`renders ./components/dropdown/demo/dropdown-button.md correctly 1`] = `
<div
  id="components-dropdown-demo-dropdown-button"
>
  <div
    class="ant-btn-group ant-dropdown-button"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default ant-btn-icon-only ant-dropdown-trigger"
      type="button"
    >
      <span
        aria-label="ellipsis"
        class="anticon anticon-ellipsis"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="ellipsis"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="ant-btn-group ant-dropdown-button"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default ant-btn-icon-only ant-dropdown-trigger"
      type="button"
    >
      <span
        aria-label="user"
        class="anticon anticon-user"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="user"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="ant-btn-group ant-dropdown-button"
  >
    <button
      class="ant-btn ant-btn-default"
      disabled=""
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default ant-btn-icon-only ant-dropdown-trigger"
      disabled=""
      type="button"
    >
      <span
        aria-label="ellipsis"
        class="anticon anticon-ellipsis"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="ellipsis"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="ant-btn-group ant-dropdown-button"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        With Tooltip
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default ant-btn-icon-only ant-btn-loading ant-dropdown-trigger"
      type="button"
    >
      <span
        class="ant-btn-loading-icon"
      >
        <span
          aria-label="loading"
          class="anticon anticon-loading anticon-spin"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      Button 
    </span>
    <span
      aria-label="down"
      class="anticon anticon-down"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders ./components/dropdown/demo/event.md correctly 1`] = `
<a
  class="ant-dropdown-trigger ant-dropdown-link"
>
  Hover me, Click menu item 
  <span
    aria-label="down"
    class="anticon anticon-down"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</a>
`;

exports[`renders ./components/dropdown/demo/item.md correctly 1`] = `
<a
  class="ant-dropdown-trigger ant-dropdown-link"
>
  Hover me 
  <span
    aria-label="down"
    class="anticon anticon-down"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</a>
`;

exports[`renders ./components/dropdown/demo/menu-full.md correctly 1`] = `
<a
  class="ant-dropdown-trigger ant-dropdown-link"
>
  Hover to check menu style 
  <span
    aria-label="down"
    class="anticon anticon-down"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</a>
`;

exports[`renders ./components/dropdown/demo/overlay-visible.md correctly 1`] = `
<a
  class="ant-dropdown-trigger ant-dropdown-link"
>
  Hover me 
  <span
    aria-label="down"
    class="anticon anticon-down"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</a>
`;

exports[`renders ./components/dropdown/demo/placement.md correctly 1`] = `
Array [
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomLeft
    </span>
  </button>,
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomCenter
    </span>
  </button>,
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomRight
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topLeft
    </span>
  </button>,
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topCenter
    </span>
  </button>,
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topRight
    </span>
  </button>,
]
`;

exports[`renders ./components/dropdown/demo/sub-menu.md correctly 1`] = `
<a
  class="ant-dropdown-trigger ant-dropdown-link"
>
  Cascading menu 
  <span
    aria-label="down"
    class="anticon anticon-down"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</a>
`;

exports[`renders ./components/dropdown/demo/trigger.md correctly 1`] = `
<a
  class="ant-dropdown-trigger ant-dropdown-link"
>
  Click me 
  <span
    aria-label="down"
    class="anticon anticon-down"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</a>
`;
